# trading-simulator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp
docs/: system-diagram.md
inc/: cli.hpp  logger.hpp  matching_engine.hpp  order.hpp  order_book.hpp  order_types.hpp  random_bot.hpp
scripts/: plotter.py
src/: cli.cpp  logger.cpp  main.cpp  matching_engine.cpp  random_bot.cpp  ws_server.cpp
tests/: CMakeLists.txt  logger_mock.hpp  test_matching_engine.cpp
trading-frontend/: Dockerfile  package-lock.json  package.json
trading-frontend/public/: index.html
trading-frontend/src/: App.css  App.js
